# AutoMoDe-Nata

./: .gitignore  CMakeLists.txt  LICENSE  README.md  foraging_computer_arena.argos  foraging_cstrebelle.argos  shelter.argos  test.argos
Diagrams/: AutoMode_classes.wsd  NEAT-AutoMode_classes.wsd  NEAT_classes.wsd
Nata/: .gitignore  CMakeLists.txt  env_rep.path
Nata/missions/: shelter_half.argos  test_rep_lf.argos
Nata/optimization/: scenario_dirgate_nata2.txt  scenario_foraging.txt  scenario_foraging_nata2.txt  scenario_xor2_nata2.txt  seeds.txt  target-runner
Nata/src/: AutoMoDeMain.cpp  RealLibrary.cmake
Repertoire_generator/: .gitignore
Repertoire_generator/generator/: CMakeLists.txt
Repertoire_generator/generator/src/NEAT/: CMakeLists.txt  experiments.cpp  experiments.h  genome.cpp  genome.h  neat.cpp  neat.h  network.cpp  nnode.h  organism.cpp  organism.h  population.cpp  population.h  species.cpp
Repertoire_generator/results/: designRep.toml
evaluation/: evaluate_chocolate.py  evaluate_harlequin.py  evaluate_neat.py  evaluations.toml  seeds.txt  start_evaluation_design_context.py  start_evaluation_pseudo_reality.py
missions/: aggregation_cluster.argos  dirgate_cluster.argos  foraging_cluster.argos  foraging_computer_arena.argos  foraging_ken.argos
optimization/: Nata-repertoire-design.toml  launch.sh  parallel-irace-mpi  scenario_dirgate.txt  scenario_foraging.txt  scenario_xor2.txt  target-runner
optimization/aggregation/: Aggregation_200k_fsm.txt  (+3 more)
scripts/: bundle_argos3_epuck.sh  launchArgos.py
src/: RealLibrary.cmake  SimLibrary.cmake
(+266 files in other folders)
